testing/Travis/testcases/TypeChecker/shouldFail/KleenePlusNonEndo.adl
CONTEXT KleenePlusNonEndoCheck IN ENGLISH

PURPOSE CONTEXT KleenePlusNonEndoCheck
{+ This test must fail because Kleene plus requires an endorelation (source = target). +}

RELATION t[A*C]
RELATION result[A*C]

RULE testKleenePlusFail: result = t+

ENDCONTEXT
